Fixed auto win length on small displays

--- a/styles/style.less
+++ b/styles/style.less
@@ -144,7 +144,7 @@ body {
         text-align: left;
     }
     .chtour-game-result {
-        width: 40px;
+        width: 60px;
         min-width: 60px;
         text-align: center;
     }
@@ -154,6 +154,14 @@ body {
         text-align: center;
     }
 }
+
+@media (max-width: 767px) {
+    table .chtour-game-result {
+        width: 40px !important;
+        min-width: 40px !important;
+    }
+}
+
 
 // Modal responsive slyles
 @media (min-width: 270px) {
